fix: min-width causing client panels to overflow

--- a/bundle/packages/vTeams/src/components/BurndownFulfiller/BurndownFulfiller.scss
+++ b/bundle/packages/vTeams/src/components/BurndownFulfiller/BurndownFulfiller.scss
@@ -10,7 +10,7 @@ $img-dimensions: 70px;
   .burndown-panel {
     background-color: $color-white;
     border-radius: 10px;
-    min-width: 30%;
+    // min-width: 30%;
     width: 30%;
     max-height: 70vh;
     overflow: hidden;
